--- a/getting-started/setup-prerequisites-installation/prerequisites-supported-platforms.mdx
+++ b/getting-started/setup-prerequisites-installation/prerequisites-supported-platforms.mdx
@@ -1,168 +1,145 @@
 ---
-title: "Prerequisites & Supported Platforms"
-description: "Outlines the minimum C++ standard required, supported operating systems and compilers, and dependencies you need before installing GoogleTest. Helps users evaluate system compatibility and prevents common compatibility pitfalls."
+title: "Prerequisites and Supported Platforms"
+description: "Review the C++ standard, compiler, and platform requirements to ensure compatibility before installing GoogleTest and GoogleMock. This page prepares users to avoid common blockers by understanding foundational dependencies."
 ---
 
-# Prerequisites & Supported Platforms
+# Prerequisites and Supported Platforms
 
-GoogleTest requires specific system environments, compiler versions, and dependencies to function seamlessly. This page provides a clear checklist of prerequisites concerning C++ standards, supported systems, compilers, and dependencies. Use this to verify compatibility before installing or integrating GoogleTest.
+Before installing GoogleTest and GoogleMock, it is critical to ensure your development environment meets all foundational dependencies and platform requirements. This preparation prevents common blockers during installation and compilation and guarantees smooth integration.
 
 ---
 
-## 1. Minimum C++ Standard
+## 1. C++ Standard Requirements
 
-GoogleTest mandates support for **C++17 or later**. This ensures access to modern language features and standard libraries critical for reliability and maintainability.
+GoogleTest and GoogleMock require a development environment that supports at minimum **C++17**. This is a strict prerequisite:
 
-- **Enforcement:**
-  - When using CMake, ensure you set:
-    ```cmake
-    set(CMAKE_CXX_STANDARD 17)
-    set(CMAKE_CXX_STANDARD_REQUIRED ON)
-    ```
-  - If not possible in your build system, specify C++17 flags explicitly (e.g., `-std=c++17` for GCC/Clang).
-- Attempts to compile GoogleTest with older C++ standards will fail with an error similar to:
+- Compilers targeting earlier C++ standards (C++14, C++11, etc.) are **not supported**.
+- You must configure your build system to use C++17 or later.
+
+### How to ensure C++17 support
+
+- For CMake projects, set:
+  ```cmake
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_STANDARD_REQUIRED ON)
   ```
-  #error C++ versions less than C++17 are not supported.
-  ```
 
-<Tip>
-Make sure your compiler toolchain fully supports C++17 features to avoid build errors or subtle runtime issues.
-</Tip>
+- For direct compiler invocations, use flags:
+  - GCC or Clang: `-std=c++17`
+  - MSVC: `/std:c++17`
 
-## 2. Supported Operating Systems
+### Why C++17?
 
-GoogleTest supports a wide variety of platforms, following [Google's Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support). Below are key supported platforms:
-
-| Operating System           | Notes                                                  |
-|---------------------------|--------------------------------------------------------|
-| Windows Desktop           | Native MSVC, MinGW supported                           |
-| Linux                     | Mainline distributions with GCC/Clang                  |
-| macOS                     | Including recent versions with Clang                   |
-| FreeBSD, OpenBSD, NetBSD  | Supported with standard toolchains                      |
-| Solaris, AIX              | Partially supported; verify toolchain compatibility    |
-| Android                   | Supported on Android API level 9 and above             |
-| QNX, Fuchsia              | Not officially supported, limited compatibility        |
+GoogleTest leverages modern language features to provide robust and efficient testing capabilities. This enables cleaner APIs, better type safety, and improved performance.
 
 <Note>
-Support for Windows Mobile, Windows Store App (WinRT), embedded systems like ESP32, ESP8266, or niche OSes (e.g. Haiku, GNU/Hurd) is not officially guaranteed.
+Using a compiler that does not meet C++17 support will result in immediate build errors and is unsupported.
 </Note>
-
-## 3. Supported Compilers
-
-GoogleTest requires C++17 support. The following compilers and versions are known to work:
-
-| Compiler              | Minimum Version    | Notes                                           |
-|-----------------------|-------------------|-------------------------------------------------|
-| MSVC                  | Visual Studio 2017 Update 3 (MSVC 19.11) or newer | Older MSVC versions (pre-2015) are not supported. Explicit check rejects MSVC versions < 1900. |
-| GCC                   | 7.0.0 or newer     | Supports C++17 fully                             |
-| Clang                 | 3.9+              | Full C++17 support recommended                   |
-| IntelLLVM             | Compatible if supports C++17 features             |
-| SunPro, IBM VisualAge | Partial support; confirm C++17 features           |
-
-<Warning>
-Compiling GoogleMock (part of GoogleTest) with MSVC versions older than Visual Studio 2015 (MSVC 14.0) will fail with an error.
-</Warning>
-
-## 4. Platform-Specific Considerations
-
-- **POSIX Threads:**
-  - GoogleTest is thread-safe when pthreads are available.
-  - On some platforms (Linux, macOS), pthreads are automatically detected.
-  - On Windows, native threading primitives are used.
-  - User can override detection with compile flags:
-    - `-DGTEST_HAS_PTHREAD=1` to force pthread support
-    - `-DGTEST_HAS_PTHREAD=0` to disable pthreads
-
-- **Stream Redirection & Death Tests:** Certain platforms do not support stream redirection or death tests (e.g., Windows Mobile, embedded platforms).
-
-- **Wide String Support:** Some platforms lack full `std::wstring` support which may affect Unicode test cases.
-
-## 5. Required Dependencies
-
-GoogleTest is largely self-contained but has the following dependencies depending on configuration:
-
-- **C++ Standard Library:** Fully C++17 compliant standard library
-- **Build Tools:**
-  - [CMake](https://cmake.org/) 3.13 or later recommended for build configuration
-  - Compiler toolchain meeting prerequisites
-- **Optional:**
-  - [Abseil](https://abseil.io/) libraries if built with Abseil support (enables advanced flags and regex integration)
-  - RE2 regex library when Abseil is enabled
-
-## 6. Typical System Requirements
-
-| Requirement       | Recommendation                |
-|-------------------|------------------------------|
-| Operating System  | One from supported platforms  |
-| Compiler          | Compatible C++17 compiler     |
-| Disk Space        | At least 100MB free for source and build output |
-| Memory            | Minimum 2GB RAM recommended    |
-| Network           | Required for cloning or downloading repositories |
-
-## 7. Checking Your Environment Compatibility
-
-Follow these steps to verify your environment meets GoogleTest's prerequisites:
-
-<Steps>
-<Step title="Confirm C++ Compiler Version and Support">
-Run:
-```bash
-${CXX} --version
-```
-or in MSVC prompt:
-```powershell
-cl
-```
-Ensure version supports C++17.
-</Step>
-<Step title="Verify pthread availability (on Unix-like systems)">
-Try:
-```bash
-pkg-config --exists pthread && echo 'Pthreads supported' || echo 'Pthreads missing'
-```
-</Step>
-<Step title="Check CMake Version">
-Run:
-```bash
-cmake --version
-```
-Make sure CMake is 3.13 or higher.
-</Step>
-<Step title="Operating System Release">
-Confirm OS version and compatibility via:
-```bash
-uname -a
-```
-(Linux/macOS) or through system info on Windows.
-</Step>
-</Steps>
-
-## 8. Common Pitfalls & Solutions
-
-<AccordionGroup title="Compatibility Pitfalls">
-<Accordion title="Error: C++ Version Not Supported">
-Ensure your project or build system explicitly sets `-std=c++17` or equivalent.
-If using CMake, use `set(CMAKE_CXX_STANDARD 17)`.
-</Accordion>
-<Accordion title="MSVC Version Too Old">
-Only Visual Studio 2015 or later is supported. Earlier versions will trigger build errors.
-Upgrade to a supported MSVC version.
-</Accordion>
-<Accordion title="Missing pthreads on Linux/macOS">
-Verify that development packages for pthreads are installed. Use system package managers (e.g., `apt-get install build-essential` on Ubuntu).
-</Accordion>
-<Accordion title="Linker Errors Related to Runtime Libraries on Windows">
-Use the CMake option `-Dgtest_force_shared_crt=ON` to align runtime libraries between your project and GoogleTest.
-</Accordion>
-</AccordionGroup>
-
-## 9. Additional Resources
-
-- [GoogleTest Official Repository](https://github.com/google/googletest)
-- [Supported Platforms & Compiler Versions](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-- [Google Testing Framework Policy on C++](https://opensource.google/documentation/policies/cplusplus-support)
-- CMake build instructions: see [Installing with CMake](../installation-cmake)
 
 ---
 
-By verifying these prerequisites, you set a solid foundation for a successful GoogleTest installation and operation, avoiding unexpected build or runtime errors.
+## 2. Supported Compilers
+
+GoogleTest has verified support for the following compiler versions and environments:
+
+| Compiler       | Minimum Version   | Notes                                    |
+|----------------|------------------|------------------------------------------|
+| GCC            | 7.0+             | Full C++17 compliance expected           |
+| Clang          | 5.0+             | Full C++17 compliance expected           |
+| MSVC           | Visual Studio 2017 (15.3+) | At least VS 2015 for GoogleMock compilation |
+
+### Compiler Version Check for GoogleMock
+
+- GoogleMock requires MS Visual C++ **2015 or later** (corresponding to `_MSC_VER >= 1900`).
+- Attempting to build with earlier MSVC versions will trigger an explicit compile-time error:
+
+  ```
+  #error "At least Visual C++ 2015 (14.0) is required to compile Google Mock."
+  ```
+
+---
+
+## 3. Supported Operating Systems and Platforms
+
+GoogleTest and GoogleMock support a wide range of platforms, consistent with Google's [Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support) and the [Supported Platforms matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md). Supported platforms include:
+
+- **Linux** (including Android)
+- **Windows** (Desktop, MinGW, Windows Mobile variants)
+- **Mac OS X and iOS**
+- **BSD variants (FreeBSD, OpenBSD, NetBSD, DragonFly)**
+- **Solaris, AIX, HP-UX, z/OS**
+- Embedded and special platforms such as **ESP8266, ESP32, NRF52, Xtensa, Qurt** (with some limitations)
+
+<Info>
+Platform detection is automatic via internal macros (e.g., `GTEST_OS_LINUX`, `GTEST_OS_WINDOWS`), enabling platform-specific optimizations and adjustments.
+</Info>
+
+### Unsupported or Limited Platforms
+
+Some embedded or specialized platforms have limited or no support for features like filesystem access or threading. Verify compatibility in your target environment.
+
+---
+
+## 4. Threading and Synchronization Support
+
+GoogleTest is **thread-safe** on platforms where threading APIs such as **pthreads** or equivalent are available.
+
+- Thread safety is enabled by default on most UNIX-like systems and Windows Desktop (non-mobile).
+- The macro `GTEST_IS_THREADSAFE` will be 1 if thread safety is active.
+- For environments where pthreads is unavailable or disabled, GoogleTest falls back to dummy synchronization primitives and is not thread-safe.
+
+### Forcing Threading Support
+
+If automatic detection fails, use compiler flags to explicitly enable or disable pthread support:
+
+```bash
+-DGTEST_HAS_PTHREAD=1  # Enable pthreads
+-DGTEST_HAS_PTHREAD=0  # Disable pthreads
+```
+
+---
+
+## 5. Build System Considerations
+
+- GoogleTest and GoogleMock can be built using **CMake**, which manages platform detection and compiler options.
+- By default, **GoogleMock will be built together with GoogleTest**.
+- To build only GoogleTest, use the CMake option `-DBUILD_GMOCK=OFF`.
+- CMake projects should set the C++ standard to C++17 or higher to satisfy requirements.
+
+Examples:
+
+```bash
+cmake .. -DCMAKE_CXX_STANDARD=17
+cmake .. -DBUILD_GMOCK=ON
+make
+```
+
+- For integration with existing build systems, ensure that the compiler, flags, and platform are compatible with C++17 and the required platform macros.
+
+---
+
+## 6. Common Pitfalls and Recommendations
+
+- **Use a supported compiler version:** Older compilers lacking C++17 support will fail.
+- **Set your compiler and build flags explicitly** to avoid ambiguity in C++ version.
+- **Verify platform macros** if targeting less common or embedded platforms.
+- **Avoid mixing runtime libraries** (especially on Windows) to prevent linker errors.
+
+---
+
+## 7. Additional Resources
+
+- For detailed supported platforms and compiler versions, refer to:
+  - [GoogleTest Foundational C++ Support Policy](https://opensource.google/documentation/policies/cplusplus-support)
+  - [OSS Policies Support Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
+- Further environment setup and best practices:
+  - [Supported Platforms and Requirements (Feature Overview)](/overview/feature-overview/supported-platforms)
+  - [Installation Methods (Getting Started)](/getting-started/setup-prerequisites-installation/installation-methods)
+
+<Check>
+Confirm your environment meets all prerequisites before proceeding with installation to avoid common setup blockers.
+</Check>
+
+---
+
+This page prepares you for a seamless install and usage of GoogleTest and GoogleMock by laying out all essential compatibility and system requirements upfront.
