--- a/changelog/upgrade-migration/breaking-changes.mdx
+++ b/changelog/upgrade-migration/breaking-changes.mdx
@@ -1,113 +1,211 @@
 ---
-title: "Breaking Changes & Migration Notes"
-description: "Explicit details about breaking changes in each release—alterations in interfaces, removed features, or behavioral shifts that require user action. Includes suggested migration steps and links to supporting documentation."
+title: "Breaking Changes & Migration Steps"
+description: "Announces any breaking changes introduced in recent versions and outlines clear steps for migrating existing tests, mocks, or integrations. Helps users eliminate upgrade blockers by understanding root causes and solutions."
 ---
 
-# Breaking Changes & Migration Notes
+# Breaking Changes & Migration Steps
 
-This page documents explicit breaking changes introduced in each major or minor GoogleTest and GoogleMock release. It details interface modifications, removed or deprecated features, and behavioral shifts that require users to update their existing codebases. Clear migration guidance and references to supporting documentation are provided to facilitate smooth upgrades.
-
----
-
-## Understanding Breaking Changes
-
-GoogleTest and GoogleMock maintain a stable API whenever possible. However, to advance the platform, to fix design issues, or to adopt modern C++ features, changes that are not backwards compatible occasionally occur. These breaking changes may include:
-
-- Removal or alteration of public APIs such as macros, classes, or functions
-- Changes in behavior affecting test results or mock verifications
-- Updated requirements for compiler versions or C++ standards
-- Modified expectations on mock method declarations or usages
-
-Users affected by breaking changes will be alerted in this document with recommendations for migration.
+This page details the critical breaking changes introduced in recent GoogleTest versions and provides clear, actionable migration steps to help users update their existing test suites, mocks, and integrations successfully. By understanding these changes and following the outlined procedures, you can avoid upgrade blockers and maintain reliable, maintainable test code.
 
 ---
 
-## Migration Guidance by Version
+## 1. Breaking Change Overview
 
-### Version 1.17.0 (Latest Release Highlights)
+GoogleTest strives for backward compatibility wherever possible. However, on occasion, intrinsic limitations or necessary improvements lead to breaking changes that affect how tests and mocks are defined or executed. These changes typically stem from deeper language or framework constraints that, when unaddressed, may cause silent errors or confusing behavior.
 
-- **Minimum C++ Standard Requirement:**
-  - GoogleTest and GoogleMock now require a minimum of C++17 support.
-  - **Action:** Ensure your compiler and build configuration target C++17 or higher.
-- **Mock Method Declarations:**
-  - Continued enforcement of `MOCK_METHOD` macros for declaring mocks with explicit `(override)` specifiers.
-  - **Tip:** Refer to the [Mocking Reference](https://github.com/google/googletest/blob/main/docs/api-reference/mocking-apis/mock-methods.md) to update your mock classes accordingly.
-- **Deprecations:**
-  - Legacy `MOCK_METHODn` macros remain supported but migration to modern `MOCK_METHOD` is advised.
+This page focuses exclusively on breaking changes that impact the user-facing testing and mocking workflows and *not* on internal implementation adjustments.
 
-### Example Migration for Mock Methods
 
+## 2. Critical Breaking Changes
+
+### 2.1. Prohibition of Underscores (`_`) in Test Suite and Test Names
+
+**What changed?**
+GoogleTest now warns and may fail to run tests if the test suite name or test name contains underscores (`_`), especially when they appear at the start or end, or consecutively within names.
+
+**Reason:**
+Under the hood, GoogleTest generates class names by concatenating the test suite and test names with underscores. Certain patterns involving underscores, like leading underscores followed by uppercase letters or consecutive underscores, produce class names that are reserved by C++ or cause duplication.
+
+**Impact:**
+If your test names or test suite names contain underscores, this can cause name collisions or compilation errors in future compiler or GoogleTest versions.
+
+**Migration steps:**
+- Avoid using underscores in the names of your tests and test suites.
+- Rename existing tests to use camel case or mixed case without underscores.
+- For example:
+  ```cpp
+  // Avoid:
+  TEST(My_TestSuite, Test_Case) { ... }
+
+  // Use instead:
+  TEST(MyTestSuite, TestCase) { ... }
+  ```
+
+**Additional Notes:**
+- Underscores anywhere inside the names are disallowed to prevent collisions such as `TEST(Time, Flies_Like_An_Arrow)` being indistinguishable from `TEST(Time_Flies, Like_An_Arrow)`.
+- This restriction applies to both test suite and individual test names.
+
+
+### 2.2. Changes Related to Mock Method Declaration and Expectation
+
+With evolving C++ standards and GoogleMock improvements, mock method declarations must precisely match the signature and qualifiers of the methods they mock. This includes constness, noexcept specifications, and reference qualifiers.
+
+**Impact:**
+- Failing to declare mocks with the correct qualifiers leads to compilation errors or silent failures where the mock may not properly intercept calls.
+- Mocks of overloaded methods must specify overloads unambiguously.
+
+**Migration steps:**
+- Always include the `(override)` specifier in `MOCK_METHOD` declarations.
+- For const methods, include `(const, override)`.
+- For noexcept methods, include `(noexcept, override)` as appropriate.
+- For methods with reference qualifiers (`&` or `&&`), use the `ref()` specifier.
+
+Example:
 ```cpp
-// Old style:
-MOCK_METHOD1(Foo, bool(int));
+class Foo {
+  virtual int Bar() const noexcept = 0;
+  virtual void Baz() & = 0;
+};
 
-// New style:
-MOCK_METHOD(bool, Foo, (int), (override));
+class MockFoo : public Foo {
+ public:
+  MOCK_METHOD(int, Bar, (), (const, noexcept, override));
+  MOCK_METHOD(void, Baz, (), (ref(&), override));
+};
 ```
 
-- **Why migrate?**
-  - Improved readability, better compiler diagnostics, and broader C++ standard compatibility.
 
-### Removed or Changed Features
+### 2.3. Default Argument Handling in `EXPECT_CALL` and `ON_CALL`
 
-- **Removal of pre-C++17 support:**
-  - If you rely on older C++ standards (C++11 or C++14), your builds will fail due to enforced minimum version checks.
-- **Simplified flag handling:**
-  - Build and runtime flags now assume C++17 features; older environment variables or compiler flags for feature toggling might be ignored.
+GoogleMock used to be more lenient when matching calls with default arguments. Now, arguments must typically match expectations explicitly.
+
+**Impact:**
+- Calls relying on default arguments may require explicit matchers.
+
+**Migration steps:**
+- Use appropriate matchers (`_` for "anything") in `EXPECT_CALL` and `ON_CALL` when ignoring certain arguments.
+- Avoid over-specifying expectations unnecessarily.
+
+
+### 2.4. Strict Enforcement of Call Order and Cardinality
+
+GoogleMock enforces expectations strictly:
+- Calls beyond the `Times()` limit are failures.
+- Matching expectations are searched from newest to oldest.
+- Calls must respect explicit sequences or `After()` clauses.
+
+**Impact:**
+- Test code that had ambiguous or insufficiently specified mocks might start failing.
+
+**Migration steps:**
+- Inspect failing tests for mismatched call counts or orders.
+- Use `RetiresOnSaturation()` for expectations you want deactivated after saturation.
+- Use sequences to enforce order only when needed.
+
+Example:
+```cpp
+EXPECT_CALL(mock, Foo(7))
+  .Times(2)
+  .RetiresOnSaturation();
+EXPECT_CALL(mock, Foo(_))
+  .Times(AnyNumber());
+```
+
+
+### 2.5. Handling of NULL vs nullptr in Assertions
+
+GoogleTest encourages using `nullptr` instead of `NULL`.
+
+**Impact:**
+- Use `EXPECT_EQ(ptr, nullptr)` instead of `EXPECT_EQ(NULL, ptr)` to avoid template resolution issues.
+
+**Migration steps:**
+- Update NULL comparisons to use C++11 `nullptr`.
+
+
+### 2.6. Death Test Restrictions
+
+Death tests execute in subprocesses and impose restrictions on global state and multithreading.
+
+**Impact:**
+- Tests may fail or deadlock if multithreading occurs outside the immediate death test code.
+
+**Migration steps:**
+- Ensure all threading occurs inside `EXPECT_DEATH` or `ASSERT_DEATH` blocks.
+- Consider setting `--gtest_death_test_style=threadsafe` for safer runs, albeit slower.
+
+
+## 3. Migration Steps: How to Adapt Your Code
+
+### 3.1. Renaming Tests to Avoid Underscores
+
+- Review all `TEST()` and `TEST_F()` macros for test names and suite names containing `_`.
+- Use find-and-replace across your codebase to replace underscores with camelCase or PascalCase equivalents.
+- Re-run your tests and fix failures promptly.
+
+
+### 3.2. Correcting Mock Method Declarations
+
+- For every `MOCK_METHOD` in your mock classes, verify it matches the base method signature precisely, including `const`, `noexcept`, and `ref` qualifiers.
+- Add `(override)` if missing.
+- For overloaded methods, use disambiguation helpers like `Const()` or explicit type casts in `EXPECT_CALL()` or `ON_CALL()`.
+
+
+### 3.3. Refining Expectations and Default Behaviors
+
+- Add `.Times(AnyNumber())` on expectations where you allow unrestricted calls.
+- Use `ON_CALL()` to specify default behavior for methods that are called but not explicitly expected.
+- Introduce sequences or `After()` clauses only where precise call order is crucial.
+
+
+### 3.4. Updating Assertions for null Pointer Comparisons
+
+- Replace `EXPECT_EQ(NULL, ptr)` with `EXPECT_EQ(ptr, nullptr)` or `EXPECT_THAT(ptr, ::testing::IsNull())`.
+- Avoid `EXPECT_NE(NULL, ptr)`, using `EXPECT_TRUE(ptr != nullptr)` instead.
+
+
+### 3.5. Death Test Adjustments
+
+- Move mock expectations inside `EXPECT_DEATH` blocks if their side effects need to be observed.
+- Eliminate or delay thread creation outside death test code.
+- Use the `threadsafe` death test style if needed.
+
+
+## 4. Troubleshooting Common Upgrade Failures
+
+- **Compilation fails with name-related errors:** Likely caused by underscore violations in test or suite names. Check all test names for underscores and rename.
+
+- **Mock method signature mismatch errors:** Compare your mock class declarations against the latest base class/method definitions to ensure qualifiers align.
+
+- **Unexpected call failures in mocks:** Review your `EXPECT_CALL` and `ON_CALL` definitions. Add `.Times()` clauses or default behaviors.
+
+- **Death test hangs or crashes:** Confirm threads aren’t active outside `EXPECT_DEATH`, and try the `threadsafe` death test style.
+
+## 5. Best Practices Moving Forward
+
+- **Adopt naming conventions** disallowing underscores in test suite and test names.
+- **Explicitly specify qualifiers** in your mock methods and expectations to avoid ambiguity.
+- **Use ON_CALL for defaults** and EXPECT_CALL for verifications, avoiding over-specification.
+- **Keep death test code isolated** and deterministic.
+- Regularly validate your test suite with `--gmock_verbose=info` to capture unexpected interactions early.
+- When introducing new mocks, use `NiceMock` for relaxed expectations during development.
+
+## 6. Additional Resources
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) — Getting started with writing tests
+- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) — Beginner-friendly guide for mocks
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — Comprehensive reference on mocking
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Advanced mock patterns and recipes
+- [FAQ: General Usage & Troubleshooting](https://google.github.io/googletest/faq.html#getting_started)
+- [Changelog: Recent Releases & Highlights](../version-history/recent-releases)
 
 ---
 
-## General Migration Tips
-
-- **Review Deprecated APIs:**
-  - Consult the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/guides/getting-started/writing-basic-tests.md) and [Mocking Reference](https://github.com/google/googletest/blob/main/docs/api-reference/mocking-apis/mock-methods.md) for updated usage patterns.
-
-- **Update Your Build Environment:**
-  - Adjust your `CMakeLists.txt` or Bazel BUILD files to target C++17 or later.
-  - Confirm your compiler versions meet or exceed recommended minimums (e.g., GCC 7+, Clang 7+, MSVC 2017 Update 3+).
-
-- **Modernize Mock Declarations:**
-  - Replace `MOCK_METHODn` macros with the modern `MOCK_METHOD` macro.
-  - Explicitly specify method qualifiers like `(const, override)` as needed.
-
-- **Use Newer Assertions and Matchers:**
-  - Adapt to new or improved assertion macros, such as `EXPECT_THAT()` with powerful matchers described in the [Matchers Reference](https://github.com/google/googletest/blob/main/docs/api-reference/core-apis/matchers.md).
-
-- **Handle Exception and Death Tests Carefully:**
-  - Review compatibility of death tests and exception assertions detailed in the [Advanced Testing Skills guide](https://github.com/google/googletest/blob/main/docs/guides/advanced-testing-skills/death-and-exception-tests.md).
+<Check>
+Always keep test and suite names free of underscores to avoid naming collisions.
+Verify mock method signatures for exact match to avoid compilation errors.
+Use ON_CALL for default mock behaviors and EXPECT_CALL sparingly for verification.
+Follow death test best practices to ensure reliability in concurrent environments.
+</Check>
 
 ---
-
-## Breaking Change Communication and Policy
-
-- GoogleTest communicates breaking changes through the changelog, release notes, and dedicated migration documentation like this page.
-- Backwards-incompatible changes are made only when necessary and typically coincide with major or minor version bumps.
-- Users are encouraged to read release notes and upgrade guidance carefully when updating.
-
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/guides/getting-started/writing-basic-tests.md) — Learn the basics of writing tests.
-- [Mocking Reference](https://github.com/google/googletest/blob/main/docs/api-reference/mocking-apis/mock-methods.md) — Details on declaring and using mocks.
-- [Matchers Reference](https://github.com/google/googletest/blob/main/docs/api-reference/core-apis/matchers.md) — Powerful matchers for expressive assertions.
-- [Advanced Mocking](https://github.com/google/googletest/blob/main/docs/guides/mocking-and-test-doubles/advanced-mocking.md) — Control mock behavior deeply.
-- [Changelog & Release Archive](https://github.com/google/googletest/blob/main/docs/changelog/release-notes/all-versions-archive.md) — Full history of releases.
-
----
-
-## Troubleshooting
-
-- **Compilation errors related to C++ version:**
-  - Confirm your compiler flags enforce C++17 or later.
-- **Mock method conflicts or deprecation warnings:**
-  - Review mock classes for old macro usage.
-  - Ensure method signatures and qualifiers are consistent.
-- **Unexpected test failures after upgrade:**
-  - Use `--gmock_verbose=info` or `--gtest_break_on_failure` flags for detailed debugging.
-
----
-
-By keeping your environment current and refactoring your mock and test codes accordingly, you will benefit from the latest GoogleTest and GoogleMock features, improved test clarity, and better compiler support.
-
-For help and community support, consult the [Support & Community Resources](https://github.com/google/googletest/blob/main/docs/faq/support-community/finding-help.md).
